Sync with build-graalvm-suite branch with build-on-circle branch, picking useful changes