@@ -4,27 +4,29 @@ set -e
 set -u
 set -o pipefail
 
-DEBUG=${DEBUG:-"false"}
-RUN_TESTS=${RUN_TESTS:-"true"}
+export DEBUG=${DEBUG:-"false"}
+export RUN_TESTS=${RUN_TESTS:-"true"}
 
-JAVA_VERSION=${JAVA_VERSION:-jdk8u152-b16}
-JDK_BASE_IMAGE_TAG=${JDK_BASE_IMAGE_TAG:-"openjdk8:${JAVA_VERSION}"}
-DOCKER_IMAGE_TAG="graal-jdk8:latest"
-USER_IN_CONTAINER=${USER_IN_CONTAINER:-"graal"}
-CONTAINER_HOME_DIR="/home/${USER_IN_CONTAINER}"
-MAKE_VERSION=${MAKE_VERSION:-3.82}
-export DOCKER_JAVA_OPTS="-Xms300m -Xmx300m"
-HOST_REPOS_DIR=${HOST_REPOS_DIR:-""}
+export JAVA_VERSION=${JAVA_VERSION:-jdk8u152-b16}
+export JDK_BASE_IMAGE_TAG=${JDK_BASE_IMAGE_TAG:-"openjdk8:${JAVA_VERSION}"}
+export DOCKER_IMAGE_TAG="graal-jdk8:latest"
+export USER_IN_CONTAINER=${USER_IN_CONTAINER:-"graal"}
+export CONTAINER_HOME_DIR="/home/${USER_IN_CONTAINER}"
+export MAKE_VERSION=${MAKE_VERSION:-3.82}
+export DOCKER_MEMORY=4096M
+export DOCKER_JAVA_OPTS="-Xms2g -Xmx2g -XX:MaxPermSize=1g -XX:+PrintFlagsFinal"
+
+export HOST_REPOS_DIR=${HOST_REPOS_DIR:-""}
 if [[ ! -z "${HOST_REPOS_DIR}" ]]; then
-    HOST_REPOS_DIR="$(pwd)/jdk8-with-graal-repos"
+   export HOST_REPOS_DIR="$(pwd)/jdk8-with-graal-repos"
 fi
 
-HOST_OUTPUT_DIR="$(pwd)/jdk8-with-graal-docker"
+export HOST_OUTPUT_DIR="$(pwd)/jdk8-with-graal-docker"
 mkdir -p "${HOST_OUTPUT_DIR}"
-BUILD_LOGS="${HOST_OUTPUT_DIR}/docker-build.logs"
+export BUILD_LOGS="${HOST_OUTPUT_DIR}/docker-build.logs"
 
-CONTAINER_SCRIPTS_DIR="${CONTAINER_HOME_DIR}/scripts"
-CONTAINER_OUTPUT_DIR="${CONTAINER_HOME_DIR}/output"
+export CONTAINER_SCRIPTS_DIR="${CONTAINER_HOME_DIR}/scripts"
+export CONTAINER_OUTPUT_DIR="${CONTAINER_HOME_DIR}/output"
 
 echo "*************************************************"
 echo "* "
@@ -54,50 +56,13 @@ echo ""
 echo "BUILD_LOGS=${BUILD_LOGS}"
 echo "RUN_TESTS=${RUN_TESTS}"
 echo "DOCKER_JAVA_OPTS=${DOCKER_JAVA_OPTS}"
+echo "DOCKER_MEMORY=${DOCKER_MEMORY}"
 echo "JAVA_HOME=${JAVA_HOME}"
 echo "*************************************************"
 
-docker build \
-            -t ${DOCKER_IMAGE_TAG} \
-            --build-arg USER_IN_CONTAINER=${USER_IN_CONTAINER}   \
-            --build-arg JAVA_VERSION=${JAVA_VERSION}             \
-            --build-arg JDK_BASE_IMAGE_TAG=${JDK_BASE_IMAGE_TAG} \
-            --build-arg MAKE_VERSION=${MAKE_VERSION} .
+./build-docker-image.sh
 
-HOST_REPOS_DIR_DOCKER_PARAM=""
-if [[ ! -z "${HOST_REPOS_DIR}" ]]; then
-    mkdir -p "${HOST_REPOS_DIR}"
-    HOST_REPOS_DIR_DOCKER_PARAM="--volume ${HOST_REPOS_DIR}:${CONTAINER_HOME_DIR}"
-fi
-
-if [[ "${DEBUG}" = "true" ]]; then
-  echo "* Running container ${DOCKER_IMAGE_TAG} in DEBUG mode"
-  docker run                                                       \
-         --rm                                                      \
-         --interactive --tty --entrypoint /bin/bash                \
-         --user ${USER_IN_CONTAINER}                               \
-         --env SCRIPTS_LIB_DIR=${CONTAINER_HOME_DIR}/scripts/lib   \
-         --env OUTPUT_DIR=${CONTAINER_OUTPUT_DIR}                  \
-         --env RUN_TESTS=${RUN_TESTS}                              \
-         --env DOCKER_JAVA_OPTS="${DOCKER_JAVA_OPTS}"              \
-         --volume $(pwd):${CONTAINER_SCRIPTS_DIR}                  \
-         --volume ${HOST_OUTPUT_DIR}:${CONTAINER_OUTPUT_DIR}       \
-         ${HOST_REPOS_DIR_DOCKER_PARAM}                            \
-         ${DOCKER_IMAGE_TAG}
-else   
-  docker run                                                       \
-         --rm                                                      \
-         --user ${USER_IN_CONTAINER}                               \
-         --entrypoint ${CONTAINER_HOME_DIR}/scripts/local-build.sh \
-         --env SCRIPTS_LIB_DIR=${CONTAINER_HOME_DIR}/scripts/lib   \
-         --env OUTPUT_DIR=${CONTAINER_OUTPUT_DIR}                  \
-         --env RUN_TESTS=${RUN_TESTS}                              \
-         --env DOCKER_JAVA_OPTS="${DOCKER_JAVA_OPTS}"              \
-         --volume $(pwd):${CONTAINER_SCRIPTS_DIR}                  \
-         --volume ${HOST_OUTPUT_DIR}:${CONTAINER_OUTPUT_DIR}       \
-         ${HOST_REPOS_DIR_DOCKER_PARAM}                            \
-         ${DOCKER_IMAGE_TAG} &> ${BUILD_LOGS}
-fi
+./run-docker-container.sh
 
 echo "*************************************************"
 echo "* "
